Fix broken alignment
Fixes #2603

Picked from 9c8679f219

--- a/symphony/assets/css/src/admin.css
+++ b/symphony/assets/css/src/admin.css
@@ -452,6 +452,7 @@ fieldset.settings.highlight {
 	margin: 0 0 0 -1.5rem;
 	padding: 0;
 	border: none;
+	display: block;
 }
 
 #password legend {
